--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen">
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
    </head>
    <body class="main-layout">
@@ -93,27 +94,19 @@
       <div class="about">
          <div class="container">
             <div class="row align-items-center">
-               <div class="col-md-5">
+               <div class="col-md-12">
                   <div class="titlepage">
-                     <h2>Welcome to Ranomafana! </h2>
-                     <p>This website was designed in collaboration with the United States Peace Corps and Madagascar National Parks and with you in mind.
-                        It is our goal to attract tourists to this tropical paradise who prefer to travel independently, design their own vacation, and immerse themselves fully in culture. It is also our goal to help you make the absolute most of your visit to Ranomafana once you do arrive!
-<br><br>                On this website you will find several tabs of information to make booking your trip to Ranomafana easy and simple. The first tab includes everything you might need to know about hotels in town – including prices, amenities, and contact information. If you're worried about an international phone call, check to see if the contact is available on WhatsApp! Don't forget to see where the hotel is on the map.</p>
-                     </div>
-               </div>
-               <div class="col-md-7">
-                  <div class="about_img">
-                     <img src="images/PARC.jpg" class="img-fluid" alt="#"/>
-                  </div>
-               </div>
-               <div class="col-md-12 mt-0">
-                  <div class="titlepage">
-                     <p class="no-margin">
-                        The next tab includes information on Ranomafana National Park, the town’s main tourist attraction. This tab will help set up all the hikes you hope to do, as it provides guidance on buying tickets, arranging guides, and what kinds of circuits are available. You'll also find a tab here on information about other activities that you can (and should!) participate in around town. This includes waterfall hikes, hot springs, kayaking, and more – be sure to check it out. Next you'll see important information on how exactly to get to town from Antananarivo via multiple forms of transportation. This can be tricky, but fear not, this will have all the information you may need. This website will also give you some educational context and information on how your ecotourism supports biodiversity conservation efforts in Ranomafana. And finally, you can find contact information should you have any questions, and a map of Ranomafana town itself.”
+                     <h2>Welcome to Ranomafana!</h2>
+                     <p class="text-justify">
+                        <img src="images/PARC.jpg" class="img-fluid float-right" style="margin-left: 15px; width: 500px;" alt="#"/>
+                        This website was designed in collaboration with the United States Peace Corps and Madagascar National Parks and with you in mind. It is our goal to attract tourists to this tropical paradise who prefer to travel independently, design their own vacation, and immerse themselves fully in culture. It is also our goal to help you make the absolute most of your visit to Ranomafana once you do arrive!
+                        <br><br>On this website you will find several tabs of information to make booking your trip to Ranomafana easy and simple. The first tab includes everything you might need to know about hotels in town – including prices, amenities, and contact information. If you're worried about an international phone call, check to see if the contact is available on WhatsApp! Don't forget to see where the hotel is on the map.
+                        <br><br>The next tab includes information on Ranomafana National Park, the town’s main tourist attraction. This tab will help set up all the hikes you hope to do, as it provides guidance on buying tickets, arranging guides, and what kinds of circuits are available. You'll also find a tab here on information about other activities that you can (and should!) participate in around town. This includes waterfall hikes, hot springs, kayaking, and more – be sure to check it out. Next you'll see important information on how exactly to get to town from Antananarivo via multiple forms of transportation. This can be tricky, but fear not, this will have all the information you may need. This website will also give you some educational context and information on how your ecotourism supports biodiversity conservation efforts in Ranomafana. And finally, you can find contact information should you have any questions, and a map of Ranomafana town itself.”
                      </p>
                   </div>
                </div>
             </div>
+            
 
          </div>
       </div>
@@ -434,42 +427,42 @@
             <div class="row">
                <div class="col-md-3 col-sm-6">
                   <div class="gallery_img">
-                     <figure><img src="images/parc7.webp"#"/></figure>
+                     <figure><img src="images/parc7.webp" class="d-block img-carousel" alt="#"/></figure>
                   </div>
                </div>
                <div class="col-md-3 col-sm-6">
                   <div class="gallery_img">
-                     <figure><img src="images/parc2.webp" alt="#"/></figure>
+                     <figure><img src="images/parc2.webp" class="d-block img-carousel" alt="#"/></figure>
                   </div>
                </div>
                <div class="col-md-3 col-sm-6">
                   <div class="gallery_img">
-                     <figure><img src="images/parc3.webp" alt="#"/></figure>
+                     <figure><img src="images/parc3.webp" class="d-block img-carousel" alt="#"/></figure>
                   </div>
                </div>
                <div class="col-md-3 col-sm-6">
                   <div class="gallery_img">
-                     <figure><img src="images/parc4.webp" alt="#"/></figure>
+                     <figure><img src="images/parc4.webp" class="d-block img-carousel" alt="#"/></figure>
                   </div>
                </div>
                <div class="col-md-3 col-sm-6">
                   <div class="gallery_img">
-                     <figure><img src="images/parc1.webp" alt="#"/></figure>
+                     <figure><img src="images/parc1.webp" class="d-block img-carousel" alt="#"/></figure>
                   </div>
                </div>
                <div class="col-md-3 col-sm-6">
                   <div class="gallery_img">
-                     <figure><img src="images/parc6.webp" alt="#"/></figure>
+                     <figure><img src="images/parc6.webp" class="d-block img-carousel" alt="#"/></figure>
                   </div>
                </div>
                <div class="col-md-3 col-sm-6">
                   <div class="gallery_img">
-                     <figure><img src="images/parc11.webp" alt="#"/></figure>
+                     <figure><img src="images/parc11.webp" class="d-block img-carousel" alt="#"/></figure>
                   </div>
                </div>
                <div class="col-md-3 col-sm-6">
                   <div class="gallery_img">
-                     <figure><img src="images/parc12.webp" alt="#"/></figure>
+                     <figure><img src="images/parc12.webp" class="d-block img-carousel" alt="#"/></figure>
                   </div>
                </div>
             </div>
@@ -503,7 +496,10 @@
            <div class="container">
               <div class="row">
                  <!-- Other footer content -->
-              </div>
+                 <button onclick="scrollToTop()" id="backToTopBtn" title="Go to top">
+                   Back to Top
+              </button>              
+            </div>
            </div>
            <div class="copyright">
               <div class="container">
@@ -530,22 +526,7 @@
            </div>
         </div>
      </footer>
-     <button onclick="scrollToTop()" id="backToTopBtn" title="Go to top">Back to Top</button>
      <script>
-      // Afficher le bouton quand l'utilisateur fait défiler vers le bas
-      window.onscroll = function() {
-          showButton();
-      };
-
-      function showButton() {
-          const btn = document.getElementById("backToTopBtn");
-          if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
-              btn.style.display = "block";
-          } else {
-              btn.style.display = "none";
-          }
-      }
-
       // Faire défiler vers le haut
       function scrollToTop() {
           document.body.scrollTop = 0; // Pour Safari
