--- a/parkinformation.html
+++ b/parkinformation.html
@@ -88,13 +88,13 @@
                   <div class="title">
                      <h2>Ranomafana National Park </h2>
                      <h6 style="color: white;">
-                        <a href="parkinformation.html#ticket" style="color: white;"><span>Ticket prices</span></a>,
-                        <a href="parkinformation.html#guide" style="color: white;"><span>Guide fees</span></a>, 
-                        <a href="parkinformation.html#getguide" style="color: white;"><span>How to get a guide</span></a>, 
-                        <a href="parkinformation.html#specialistguide" style="color: white;"><span>Specialist guides</span></a>, 
-                        <a href="parkinformation.html#daynighthike" style="color: white;"><span>Day/night hikes available</span></a>,
-                        <a href="parkinformation.html#trail" style="color: white;"><span>Trail quality</span></a>,
-                        <a href="parkinformation.html#plantanimal" style="color: white;"><span>Plant and animals to look out for</span></a>
+                        <a href="parkinformation.html#ticket" style="color: white;"><span>Ticket Prices</span></a>,
+                        <a href="parkinformation.html#guide" style="color: white;"><span>Guide Fees</span></a>, 
+                        <a href="parkinformation.html#getguide" style="color: white;"><span>How to Get a Guide</span></a>, 
+                        <a href="parkinformation.html#specialistguide" style="color: white;"><span>Specialist Guides</span></a>, 
+                        <a href="parkinformation.html#daynighthike" style="color: white;"><span>Day/Night Hikes Available</span></a>,
+                        <a href="parkinformation.html#trail" style="color: white;"><span>Trails</span></a>,
+                        <a href="parkinformation.html#plantanimal" style="color: white;"><span>Plants and Animals to Look Out For </span></a>
                      </h6>
                   </div>
                </div>
@@ -106,42 +106,38 @@
          <div class="container-fluid">
             <div class="row">
                <div class="row align-items-center">
-                  <div class="col-md-9 ">
+                  <div class="col-md-12 ">
                      <div class="titlepage">
-                     <p class="margin_0">Ranomafana National Park was established as Madagascar’s fourth national park in 1991, and further established as a UNESCO World Heritage Site in 2007. Today it protects over 43,550 hectares of mountainous rainforest and is considered one of the island's most important conservation sites for its treasure trove of endemic flora and fauna. It is the fourth most visited national park in Madagascar by international tourists, and for good reason! Along Ranomafana’s numerous hiking circuits visitors can find 13 different species of lemurs including the famous Golden bamboo lemur, Greater bamboo lemur, and Milne-Edwards sifaka. Visitors can also anticipate seeing any of the 118 species of unique birds, 30 of which are endemic to Ranomafana, such as the forest ibis, ground rollers, and blue vangas. The park contains as well a host of well-camouflaged and incredibly cool reptiles like the satanic leaf-tailed gecko, the mossy leaf-tailed gecko, and the Madagascar boa. </p>
+                        <p class="text-justify">
+                           <img src="images/parc11.webp" class="img-fluid float-right" style="margin-left: 15px; width: 350px;" alt="#"/>
+                           Ranomafana National Park was established as Madagascar’s fourth national park in 1991, and further established as a UNESCO World Heritage Site in 2007. Today it protects over 43,550 hectares of mountainous rainforest and is considered one of the island's most important conservation sites for its treasure trove of endemic flora and fauna. It is the fourth most visited national park in Madagascar by international tourists, and for good reason! Along Ranomafana’s numerous hiking circuits visitors can find 13 different species of lemurs including the famous Golden bamboo lemur, Greater bamboo lemur, and Milne-Edwards sifaka. Visitors can also anticipate seeing any of the 118 species of unique birds, 30 of which are endemic to Ranomafana, such as the forest ibis, ground rollers, and blue vangas. The park contains as well a host of well-camouflaged and incredibly cool reptiles like the satanic leaf-tailed gecko, the mossy leaf-tailed gecko, and the Madagascar boa.                         </p>
                   </div>
-                  </div>
-                  <div class="col-md-3 text-center">
-                     <div class="about_img">
-                        <figure><img src="images/parc5.webp" class="img-fluid" alt="#"/></figure>
-                     </div>
                   </div>
                </div>
                <br>
                <div class="row align-items-center">
-                  <div class="col-md-3 text-center">
-                     <div class="about_img ">
-                        <figure><img src="images/parc3.webp" class="img-fluid" alt="#"/></figure>
+                  <div class="col-md-12">
+                     <div class="titlepage" style="display: flex; align-items: center;">
+                        <img src="images/parc3.webp" class="img-fluid" style="margin-right: 15px; width: 350px;" alt="#"/>
+                        <p class="text-justify" style="margin: 0;">
+                           The park’s main circuit is the Talatakely (or Aureus) trail. When choosing this path, one can reasonably expect a 2-4 hour hike walking on a mix of clearly delineated paths and much more ambiguous cuts through the brush of secondary forest. This path takes you into bamboo forests, home of some Golden and Greater bamboo lemur groups, and up to the lookout, where Red-bellied and Red-fronted lemurs enjoy hanging out. Other paths in Talatakely can take you to a waterfall called Sakaroa, where on a hot day one might enjoy a dip. Generally, this circuit is considered easy to moderately challenging with some steep climbs and descents.
+                        </p>
                      </div>
                   </div>
-                  <div class="col-md-9 ">
-                     <div class="titlepage">
-                        <p class="margin_0" id="trail">The park’s main circuit is the Talatakely (or Aureus) trail. When choosing this path, one can reasonably expect a 2-4 hour hike walking on a mix of clearly delineated paths and much more ambiguous cuts through the brush of secondary forest. This path takes you into bamboo forests, home of some Golden and Greater bamboo lemur groups, and up to the lookout, where Red-bellied and Red-fronted lemurs enjoy hanging out. Other paths in Talatakely can take you to a waterfall called Sakaroa, where on a hot day one might enjoy a dip. Generally, this circuit is considered easy to moderately challenging with some steep climbs and descents. </p>
-                  </div>
-               </div>
+                  
                <br>
                <div class="row align-items-center">
-                  <div class="col-md-10 ">
-                     <div class="titlepage">
-                        <p class="margin_0">Other circuits available include Vatoharanana, Valohoaka, Sahamalaotra. Each of these circuits give you a unique glimpse into Ranomafana, and each has varying degrees of difficulty. It is important to note that whichever circuit you choose, expressing your physical ability and concerns to guides is always welcome, and they are more than capable of adjusting the route they take you on to fit your goals. </p>
-                     </div>
-                     </div>
-                  <div class="col-md-2">
-                     <div class="about_img">
-                        <figure><img src="images/parc8.webp" class="img-fluid" alt="#"/></figure>
+                  <div class="col-md-12">
+                     <div class="titlepage" style="display: flex; align-items: center;">
+                        <p class="text-justify" style="margin-right: 15px;">
+                           Other circuits available include Vatoharanana, Valohoaka, Sahamalaotra. Each of these circuits give you a unique glimpse into Ranomafana, and each has varying degrees of difficulty. It is important to note that whichever circuit you choose, expressing your physical ability and concerns to guides is always welcome, and they are more than capable of adjusting the route they take you on to fit your goals.
+                        </p>
+                        <img src="images/parc12.webp" class="img-fluid" style="margin-left: auto; width: 400px;" alt="#"/>
                      </div>
                   </div>
                </div>
+               
+               <br>
                <br>
                <div class="col-md-12">
                   <div class="titlepage">
@@ -153,7 +149,9 @@
                            <li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<u>Kids (0-5):</u> free</li>
                         </ul>
                         <br><br>
-                        <p class="margin_0" id="guide"><b>Groups of 1-4 people should expect to take one guide, and groups 6+ people should take at least two guides. <br><u>Guide pricing is based on circuits and their length as follows:</u></b></p>
+
+                        <p class="margin_0" id="guide">                           <img src="images/parc10.webp" class="img-fluid float-left" style="margin-right: 15px; width: 350px;" alt="#"/>
+                           <b>Groups of 1-4 people should expect to take one guide, and groups 6+ people should take at least two guides. <br><u>Guide pricing is based on circuits and their length as follows:</u></b></p>
                         <ul style="text-align: left;">
                            <li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<u>Talatakely (Aureus) :</u> 90 000 MGA (2-4h)</li>
                            <li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<u>Vatoharanana :</u> 120 000 MGA (3-4h)</li>
@@ -250,7 +248,9 @@
            <div class="container">
               <div class="row">
                  <!-- Other footer content -->
-              </div>
+                 <button onclick="scrollToTop()" id="backToTopBtn" title="Go to top">
+                  Back to Top
+             </button>              </div>
            </div>
            <div class="copyright">
               <div class="container">
@@ -277,22 +277,7 @@
            </div>
         </div>
      </footer>
-     <button onclick="scrollToTop()" id="backToTopBtn" title="Go to top">Back to Top</button>
      <script>
-      // Afficher le bouton quand l'utilisateur fait défiler vers le bas
-      window.onscroll = function() {
-          showButton();
-      };
-
-      function showButton() {
-          const btn = document.getElementById("backToTopBtn");
-          if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
-              btn.style.display = "block";
-          } else {
-              btn.style.display = "none";
-          }
-      }
-
       // Faire défiler vers le haut
       function scrollToTop() {
           document.body.scrollTop = 0; // Pour Safari
