--- a/hotels.html
+++ b/hotels.html
@@ -1401,8 +1401,11 @@
         <div class="footer">
            <div class="container">
               <div class="row">
-                 <!-- Other footer content -->
-              </div>
+               <div class="row">
+                  <!-- Other footer content -->
+                  <button onclick="scrollToTop()" id="backToTopBtn" title="Go to top">
+                    Back to Top
+               </button>              </div>              </div>
            </div>
            <div class="copyright">
               <div class="container">
@@ -1429,23 +1432,7 @@
            </div>
         </div>
      </footer>
-     <button onclick="scrollToTop()" id="backToTopBtn" title="Go to top">Back to Top</button>
      <script>
-      // Afficher le bouton quand l'utilisateur fait défiler vers le bas
-      window.onscroll = function() {
-          showButton();
-      };
-
-      function showButton() {
-          const btn = document.getElementById("backToTopBtn");
-          if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
-              btn.style.display = "block";
-          } else {
-              btn.style.display = "none";
-          }
-      }
-
-      // Faire défiler vers le haut
       function scrollToTop() {
           document.body.scrollTop = 0; // Pour Safari
           document.documentElement.scrollTop = 0; // Pour Chrome, Firefox, IE, et Opera
