--- a/howtoget.html
+++ b/howtoget.html
@@ -56,7 +56,7 @@
                             <li class="nav-item">
                               <a class="nav-link" href="otheractivities.html">Other Activities</a>
                           </li>
-                          <li class="nav-item">
+                          <li class="nav-item active">
                               <a class="nav-link" href="howtoget.html">How to get to town</a>
                           </li>
                             <li class="nav-item">
@@ -87,7 +87,12 @@
                <div class="col-md-12">
                   <div class="title">
                      <h2>Information on how to get to town </h2>
-                     <h6 style="color: white;">local taxis, private cars, and flights</h6>
+                     <h6 style="color: white;">
+                        <a href="howtoget.html#localtaxis" style="color: white;"><span>Local Taxis</span></a>,
+                        <a href="howtoget.html#privatecars" style="color: white;"><span>Private Cars</span></a>, and
+                        <a href="howtoget.html#flights" style="color: white;"><span>Flights</span></a>, 
+                       
+                     </h6>
 
                   </div>
                </div>
@@ -105,22 +110,19 @@
                     </div>
                  </div>
              </div>
-             <div class="row align-items-center">
-                <div class="col-md-8">
+             <div class="row align-items-center" id="localtaxis">
+                <div class="col-md-12">
                    <div class="titlepage">
                      <h2>Cotisse Bus</h2>
-                      <p class="margin_0">Book a seat in a Cotisse car by calling/Whatsapp messaging the Cotisse Antananarivo station at (+261 32 11 027 10) or by going in person to the station. Seats have to be paid for at least 24 hours before departure either online using Paypal or MVola money, or in person at any of their stations. Seats to Fianarantsoa will cost 40 000 MGA each, and buses run there daily/nightly. The drive will take 12 hours with regular bathroom breaks and one lunch break. If you choose to take the daytime bus, you will arrive in Fianarantsoa at 7pm. Local buses to Ranomafana will not be running then, and so it is best to overnight in the city. There are several good hotel options, including Zomatel and Hotel Vannie, that typically have open rooms and cost between 50 000 - 90 000 MGA per night. In the morning, you can go to the local bus station at any time and take a regional brousse (bus) straight to Ranomafana for 7 000 MGA per person. That drive is about 2.5 hours – use the restroom before getting in! If you choose to take the nighttime bus, you will arrive in Fianarantsoa in the morning and can head directly to the local brousse station to make the transfer to Ranomafana. 
+                     <p class="text-justify margin_0">
+                        <img src="images/cotisse.webp" class="img-fluid float-right" style="margin-left: 15px; width: 300px;" alt="#"/>
+                        Book a seat in a Cotisse car by calling/Whatsapp messaging the Cotisse Antananarivo station at (+261 32 11 027 10) or by going in person to the station. Seats have to be paid for at least 24 hours before departure either online using Paypal or MVola money, or in person at any of their stations. Seats to Fianarantsoa will cost 40 000 MGA each, and buses run there daily/nightly. The drive will take 12 hours with regular bathroom breaks and one lunch break. If you choose to take the daytime bus, you will arrive in Fianarantsoa at 7pm. Local buses to Ranomafana will not be running then, and so it is best to overnight in the city. There are several good hotel options, including Zomatel and Hotel Vannie, that typically have open rooms and cost between 50 000 - 90 000 MGA per night. In the morning, you can go to the local bus station at any time and take a regional brousse (bus) straight to Ranomafana for 7 000 MGA per person. That drive is about 2.5 hours – use the restroom before getting in! If you choose to take the nighttime bus, you will arrive in Fianarantsoa in the morning and can head directly to the local brousse station to make the transfer to Ranomafana.
                         <br><br>Getting from the Cotisse station in Fianarantsoa to a hotel is not hard! You can choose to walk to either Zomatel or Vannie Hotel, which would be a 20 or 15 minute walk respectively, or you can take a cab. The cab ride will be no longer than 5-10 minutes and should cost no more than 10 000 MGA. Farther hotels, such as Mahamanina, will take a little longer and the cab may cost a bit more.
                         <br><br>Getting to the local bus station in Fianarantsoa is also not difficult. From Zomatel and Vannie Hotel it is simply a walk down the hill (veer right) and from other parts of town any cab driver will understand “brousse stationnement”. Fair warning, regional brousses look a bit different from Cotisse (or Soatrans). You will be squeezed in there and your baggage will likely sit on the roof. Let the driver or door attendant know you are getting off at Ranomafana and you should be good to go. Be aware of your belongings and surroundings as best you can, and keep valuables on your person.
-                        </p>
+                     </p>
 
                     </div>
                 </div>
-                <div class="col-md-4 text-center">
-                  <div class="about_img">
-                     <figure><img src="images/cotisse.webp" class="img-fluid" alt="#"/></figure>
-                  </div>
-               </div>
                 <br>
              </div>
              <div class="row align-items-center">
@@ -144,7 +146,7 @@
                 <br>
              </div>
              <br>
-             <div class="row">
+             <div class="row" id="privatecars">
                 <div class="col-md-12">
                    <div class="titlepage">
                      <h2>Private car</h2>
@@ -154,7 +156,7 @@
                 </div>
                 <br>
              </div>
-             <div class="row">
+             <div class="row" id="flights">
                 <div class="col-md-12">
                    <div class="titlepage">
                      <h2>Private flight to Fianarantsoa</h2>
@@ -176,6 +178,9 @@
            <div class="container">
               <div class="row">
                  <!-- Other footer content -->
+                 <button onclick="scrollToTop()" id="backToTopBtn" title="Go to top">
+                  Back to Top
+             </button> 
               </div>
            </div>
            <div class="copyright">
@@ -203,23 +208,8 @@
            </div>
         </div>
      </footer>
-     <button onclick="scrollToTop()" id="backToTopBtn" title="Go to top">Back to Top</button>
      <script>
-      // Afficher le bouton quand l'utilisateur fait défiler vers le bas
-      window.onscroll = function() {
-          showButton();
-      };
-
-      function showButton() {
-          const btn = document.getElementById("backToTopBtn");
-          if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
-              btn.style.display = "block";
-          } else {
-              btn.style.display = "none";
-          }
-      }
-
-      // Faire défiler vers le haut
+            // Faire défiler vers le haut
       function scrollToTop() {
           document.body.scrollTop = 0; // Pour Safari
           document.documentElement.scrollTop = 0; // Pour Chrome, Firefox, IE, et Opera
