--- a/hotels.html
+++ b/hotels.html
@@ -940,36 +940,35 @@
                </div>
             
                <div class="col-md-6">
-                  <div class="row">
-
-                     <div class="col-md-6">
-                        <div id="serv_hover" class="room">
-                           <div class="room_img">
-                              <figure><img src="images/hotels/thermal1.webp" alt="#" class="img-fluid"/></figure>
-                           </div>
-                        </div>
+                  <!-- Carousel with Indicators -->
+                  <div id="carouselThermalIndicators" class="carousel slide" data-bs-ride="carousel">
+                  <!-- Indicators (points) -->
+                     <div class="carousel-indicators">
+                           <button type="button" data-bs-target="#carouselThermalIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                           <button type="button" data-bs-target="#carouselThermalIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                           <button type="button" data-bs-target="#carouselThermalIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
                      </div>
-                     <div class="col-md-6">
-                        <div id="serv_hover" class="room">
-                           <div class="room_img">
-                              <figure><img src="images/hotels/thermal2.webp" alt="#" class="img-fluid"/></figure>
+                     <!-- Carousel Items -->
+                     <div class="carousel-inner">
+                           <div class="carousel-item active">
+                              <img src="images/hotels/thermal1.webp" class="d-block w-100" alt=" Thermal Image 1">
                            </div>
-                        </div>
-                     </div>
-                     <div class="col-md-6">
-                        <div id="serv_hover" class="room">
-                           <div class="room_img">
-                              <figure><img src="images/hotels/thermal3.webp" alt="#" class="img-fluid"/></figure>
+                           <div class="carousel-item">
+                              <img src="images/hotels/thermal2.webp" class="d-block w-100" alt="Thermal Image 2">
                            </div>
-                        </div>
+                           <div class="carousel-item">
+                              <img src="images/hotels/thermal3.webp" class="d-block w-100" alt="Thermal Image 3">
+                           </div>                        
                      </div>
-                     <div class="col-md-6">
-                        <div id="serv_hover" class="room">
-                           <div class="room_img">
-                              <figure><img src="images/hotels/thermal4.webp" alt="#" class="img-fluid"/></figure>
-                           </div>
-                        </div>
-                     </div>
+                     <!-- Arrows to navigate the carousel -->
+                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselThermalIndicators" data-bs-slide="prev">
+                           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                           <span class="visually-hidden">Previous</span>
+                     </button>
+                     <button class="carousel-control-next" type="button" data-bs-target="#carouselThermalIndicators" data-bs-slide="next">
+                           <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                           <span class="visually-hidden">Next</span>
+                     </button>
                   </div>
                </div>
             </div>
