--- a/howtoget.html
+++ b/howtoget.html
@@ -86,7 +86,7 @@
             <div class="row">
                <div class="col-md-12">
                   <div class="title">
-                     <h2>Information on how to get to town </h2>
+                     <h2>How to Get to Ranomafana </h2>
                      <h6 style="color: white;">
                         <a href="howtoget.html#localtaxis" style="color: white;"><span>Local Taxis</span></a>,
                         <a href="howtoget.html#privatecars" style="color: white;"><span>Private Cars</span></a>, and
