--- a/otheractivities.html
+++ b/otheractivities.html
@@ -180,22 +180,20 @@
              </div>
              <br>
 
-             <div class="row align-items-center" id="waterfall">
-                <div class="col-md-12">
+             <div class="row" id="waterfall">
+               <div class="col-md-12">
                    <div class="titlepage">
-                     <h2>Waterfall Hikes</h2>
-                      <p class="text-justify margin_0">
-                        <img src="images/water.webp" class="img-fluid float-left" style="margin-right: 15px; width: 200px;" alt="#"/>
-                        If you've done the national park and are now looking for a smaller hike close to town, fear not! The area around Ranomafana holds plenty of lovely trails to stroll on. One popular option for locals is a short hike to the biggest waterfall the Namorana river boasts. This waterfall is not visible from the road and is located about an hour walk up the river from town. You start your journey at the public swimming pool (piscine) and from there continue on the main path past the pool up the river. This hike takes you through a small town, along thin dirt paths, and through some rice paddies – don't worry, you're on the right track! You should be able to see the large waterfall in the distance about halfway into the hike. If at any point you feel you are going the wrong direction, asking a passerby for directions to the “cascade” will be sure to set you straight. 
-                     </p>
-                        <br><br>
-                     </p>
-                     </div>
-                </div>
-
-                <br>
-
-             </div>
+                       <h2>Waterfall Hikes</h2>
+                       <div class="d-flex align-items-center">
+                           <img src="images/water.webp" class="img-fluid" style="margin-right: 15px; width: 400px;" alt="#"/>
+                           <p class="text-justify margin_0">
+                               If you've done the national park and are now looking for a smaller hike close to town, fear not! The area around Ranomafana holds plenty of lovely trails to stroll on. One popular option for locals is a short hike to the biggest waterfall the Namorana river boasts. This waterfall is not visible from the road and is located about an hour walk up the river from town. You start your journey at the public swimming pool (piscine) and from there continue on the main path past the pool up the river. This hike takes you through a small town, along thin dirt paths, and through some rice paddies – don't worry, you're on the right track! You should be able to see the large waterfall in the distance about halfway into the hike. If at any point you feel you are going the wrong direction, asking a passerby for directions to the “cascade” will be sure to set you straight.
+                           </p>
+                       </div>
+                   </div>
+               </div>
+           </div>
+           
          </div>
       </div>
       <!-- end about -->
