--- a/parkinformation.html
+++ b/parkinformation.html
@@ -150,7 +150,7 @@
                         </ul>
                         <br><br>
 
-                        <p class="margin_0" id="guide">                           <img src="images/parc10.webp" class="img-fluid float-left" style="margin-right: 15px; width: 350px;" alt="#"/>
+                        <p class="margin_0" id="guide">                           <img src="images/parc10.webp" class="img-fluid float-right" style="margin-left: 15px; width: 500px;" alt="#"/>
                            <b>Groups of 1-4 people should expect to take one guide, and groups 6+ people should take at least two guides. <br><u>Guide pricing is based on circuits and their length as follows:</u></b></p>
                         <ul style="text-align: left;">
                            <li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<u>Talatakely (Aureus) :</u> 90 000 MGA (2-4h)</li>
