--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                <div class="col-md-4 col-sm-6">
                   <div id="serv_hover"  class="room">
                      <div class="room_img">
-                        <figure><img src="images/hotels/setam1.webp" alt="#"/></figure>
+                        <figure><img src="images/hotels/setam1.webp" class="d-block img-carousel" alt="#"/></figure>
                      </div>
                      <div class="bed_room">
                         <h3>SETAM Lodge</h3>
@@ -136,9 +136,9 @@
                <div class="col-md-4 col-sm-6">
                   <div id="serv_hover"  class="room">
                      <div class="room_img">
-                        <figure><img src="images/hotels/centrest1.webp" alt="#"/></figure>
+                        <figure><img src="images/hotels/centrest1.webp" class="d-block img-carousel" alt="#"/></figure>
                      </div>
-                     <div class="bed_room">
+                     <div class="bed_room"> 
                         <h3>Centrest</h3>
                         <a class="read_more" href="hotels.html#centrest"> More</a>
                      </div>
@@ -147,7 +147,7 @@
                <div class="col-md-4 col-sm-6">
                   <div id="serv_hover"  class="room">
                      <div class="room_img">
-                        <figure><img src="images/hotels/foretaustral1.webp" alt="#"/></figure>
+                        <figure><img src="images/hotels/foretaustral1.webp" class="d-block img-carousel" alt="#"/></figure>
                      </div>
                      <div class="bed_room">
                         <h3>Foret Austral</h3>
@@ -158,7 +158,7 @@
                <div class="col-md-4 col-sm-6">
                   <div id="serv_hover"  class="room">
                      <div class="room_img">
-                        <figure><img src="images/hotels/grenat1.webp" alt="#"/></figure>
+                        <figure><img src="images/hotels/grenat1.webp" class="d-block img-carousel" alt="#"/></figure>
                      </div>
                      <div class="bed_room">
                         <h3>Grenat</h3>
@@ -169,7 +169,7 @@
                <div class="col-md-4 col-sm-6">
                   <div id="serv_hover"  class="room">
                      <div class="room_img">
-                        <figure><img src="images/hotels/ihary1.webp" alt="#"/></figure>
+                        <figure><img src="images/hotels/ihary1.webp" class="d-block img-carousel" alt="#"/></figure>
                      </div>
                      <div class="bed_room">
                         <h3>Ihary</h3>
@@ -180,7 +180,7 @@
                <div class="col-md-4 col-sm-6">
                   <div id="serv_hover"  class="room">
                      <div class="room_img">
-                        <figure><img src="images/hotels/chezjose1.webp" alt="#"/></figure>
+                        <figure><img src="images/hotels/chezjose1.webp" class="d-block img-carousel" alt="#"/></figure>
                      </div>
                      <div class="bed_room">
                         <h3>Chez Jose</h3>
@@ -191,7 +191,7 @@
                <div class="col-md-4 col-sm-6">
                   <div id="serv_hover"  class="room">
                      <div class="room_img">
-                        <figure><img src="images/hotels/gaspard1.webp" alt="#"/></figure>
+                        <figure><img src="images/hotels/gaspard1.webp" class="d-block img-carousel" alt="#"/></figure>
                      </div>
                      <div class="bed_room">
                         <h3>Chez Gaspard</h3>
@@ -202,7 +202,7 @@
                <div class="col-md-4 col-sm-6">
                   <div id="serv_hover"  class="room">
                      <div class="room_img">
-                        <figure><img src="images/hotels/manja1.webp" alt="#"/></figure>
+                        <figure><img src="images/hotels/manja1.webp" class="d-block img-carousel" alt="#"/></figure>
                      </div>
                      <div class="bed_room">
                         <h3>Manja</h3>
@@ -213,7 +213,7 @@
                <div class="col-md-4 col-sm-6">
                   <div id="serv_hover"  class="room">
                      <div class="room_img">
-                        <figure><img src="images/hotels/thermal1.webp" alt="#"/></figure>
+                        <figure><img src="images/hotels/thermal1.webp" class="d-block img-carousel" alt="#"/></figure>
                      </div>
                      <div class="bed_room">
                         <h3>Thermal</h3>
@@ -224,7 +224,7 @@
                <div class="col-md-4 col-sm-6">
                   <div id="serv_hover"  class="room">
                      <div class="room_img">
-                        <figure><img src="images/hotels/audominatur1.webp" alt="#"/></figure>
+                        <figure><img src="images/hotels/audominatur1.webp" class="d-block img-carousel" alt="#"/></figure>
                      </div>
                      <div class="bed_room">
                         <h3>Au Domnatur</h3>
@@ -235,7 +235,7 @@
                <div class="col-md-4 col-sm-6">
                   <div id="serv_hover"  class="room">
                      <div class="room_img">
-                        <figure><img src="images/hotels/soaguest1.webp" alt="#"/></figure>
+                        <figure><img src="images/hotels/soaguest1.webp" class="d-block img-carousel" alt="#"/></figure>
                      </div>
                      <div class="bed_room">
                         <h3>Soa Guest</h3>
@@ -246,7 +246,7 @@
                <div class="col-md-4 col-sm-6">
                   <div id="serv_hover"  class="room">
                      <div class="room_img">
-                        <figure><img src="images/hotels/karibou1.webp" alt="#"/></figure>
+                        <figure><img src="images/hotels/karibou1.webp" class="d-block img-carousel" alt="#"/></figure>
                      </div>
                      <div class="bed_room">
                         <h3>Karibotel</h3>
@@ -257,7 +257,7 @@
                <div class="col-md-4 col-sm-6">
                   <div id="serv_hover"  class="room">
                      <div class="room_img">
-                        <figure><img src="images/hotels/mirary1.webp" alt="#"/></figure>
+                        <figure><img src="images/hotels/mirary1.webp" class="d-block img-carousel" alt="#"/></figure>
                      </div>
                      <div class="bed_room">
                         <h3>Mirary</h3>
@@ -268,7 +268,7 @@
                <div class="col-md-4 col-sm-6">
                   <div id="serv_hover"  class="room">
                      <div class="room_img">
-                        <figure><img src="images/hotels/other-hotels.webp" alt="#"/></figure>
+                        <figure><img src="images/hotels/other-hotels.webp" class="d-block img-carousel" alt="#"/></figure>
                      </div>
                      <div class="bed_room">
                         <h3>Chez Rose, Hotel In-Kavana</h3>
@@ -279,7 +279,7 @@
                <div class="col-md-4 col-sm-6">
                   <div id="serv_hover"  class="room">
                      <div class="room_img">
-                        <figure><img src="images/hotels/other-hotels.webp" alt="#"/></figure>
+                        <figure><img src="images/hotels/other-hotels.webp" class="d-block img-carousel" alt="#"/></figure>
                      </div>
                      <div class="bed_room">
                         <h3>Coin D’Or, La Palmeraie</h3>
