--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                                 <a class="nav-link" href="otheractivities.html">Other Activities</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="howtoget.html">How to get to town</a>
+                                <a class="nav-link" href="howtoget.html">How to get to Ranomafana</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="educational.html">Conservation</a>
