--- a/otheractivities.html
+++ b/otheractivities.html
@@ -57,8 +57,8 @@
                               <a class="nav-link" href="otheractivities.html">Other Activities</a>
                           </li>
                           <li class="nav-item">
-                              <a class="nav-link" href="howtoget.html">How to get to town</a>
-                          </li>
+                           <a class="nav-link" href="howtoget.html">How to get to Ranomafana</a>
+                        </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="educational.html">Conservation</a>
                             </li>
