update 4 with logo

--- a/contact.html
+++ b/contact.html
@@ -116,28 +116,28 @@
           </div>
        </div>
        <div class="copyright">
-          <div class="container">
+         <div class="container">
              <div class="row">
-                <div class="col-md-10 offset-md-1">
-                   <p>© 2024 All Rights Reserved. Design by 
-                      <a href="#">Herisoa Ny Aina RAZAFIMANDIMBY</a>
-                      &nbsp;
-                      <a href="https://web.facebook.com/profile.php?id=100008213774164" target="_blank">
-                         <i class="fa fa-facebook" aria-hidden="true"></i>
-                      </a>
-                      &nbsp;
-                      <a href="https://www.linkedin.com/in/herisoa-ny-aina-razafimandimby-50962aa2/" target="_blank">
-                         <i class="fa fa-linkedin" aria-hidden="true"></i>
-                      </a>
-                      &nbsp;
-                      <a href="tel:+261346018550" target="_blank">
-                         <i class="fa fa-whatsapp" aria-hidden="true"></i>
-                      </a>
-                   </p>
-                </div>
+                 <div class="col-md-10 offset-md-1">
+                     <!-- Utilisation de flexbox pour aligner les éléments verticalement et répartir l'espace -->
+                     <div class="bailleurs-logos" style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px;">
+                         <!-- Logo à gauche -->
+                         <div class="logo-gauche">
+                             <img src="images/logo1.jpg" alt="Logo Bailleurs 1" class="bailleur-logo" style="max-height: 70px; margin-top: 10px;"> <!-- Ajout du margin-top ici -->
+                         </div>
+     
+                         <!-- Texte centré -->
+                         <p style="margin: 0; text-align: center;">© 2024 All Rights Reserved.</p>
+     
+                         <!-- Logo à droite -->
+                         <div class="logo-droite">
+                             <img src="images/logo2.png" alt="Logo Bailleurs 2" class="bailleur-logo" style="max-height: 70px; margin-top: 10px;"> <!-- Ajout du margin-top ici -->
+                         </div>
+                     </div>
+                 </div>
              </div>
-          </div>
-       </div>
+         </div>
+     </div>
     </div>
  </footer>
  <script src="js/jquery.min.js"></script>
