--- a/otheractivities.html
+++ b/otheractivities.html
@@ -101,7 +101,7 @@
       </div>
       <!-- about -->
       <div class="about">
-         <div class="container-fluid">
+         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-12" id="hot-springs">
                     <div class="titlepage">
@@ -126,6 +126,12 @@
                   </p>
                 </div>
              </div>
+             <div class="col-md-12 ">
+               <div class="titlepage">
+                 <p class="text-justify">
+                  Finally, if you’re looking for perhaps a more familiar hot-tub like experience, complete with poolside food and beverage service, your best thermal options in Ranomafana are the private pools at Hotel Thermal. These three small thermal pools seat up to 8 people each and need to be booked in advance with the hotel's front desk. Prices are 20k per person for several hours. The hotel provides changing rooms, bathrooms, cold showers, and towels. You are able to book the hot spring pools for any time, including late into the evening/night, and do not need to be staying at the hotel. You are also able to order alcoholic and non alcoholic beverages to be enjoyed in the pool.                 </p>
+               </div>
+            </div>
             </div>
             <br>
             <div class="row align-items-center" id="kaiaking">
@@ -167,7 +173,7 @@
                    <div class="titlepage">
                      <h2>Centre Valbio</h2>
                      <p class="text-justify margin_0">
-                        <img src="images/valbio.webp" class="img-fluid float-right" style="margin-left: 15px; width: 300px;" alt="#"/>
+                        <img src="images/valbio.webp" class="img-fluid float-right" style="margin-left: 15px; width: 500px;" alt="#"/>
                         Centre ValBio is an American research station founded in 2003 by primatologist Dr. Patricia Wright. Today it is functionally run by a team of Malagasy and American full-time researchers and staff. They regularly host talks about ongoing research, trainings for future researchers, and tours of their facility near the entrance to the national park.                         <br><br>
                         More information on their work and how to visit can be found at their website here: 
                         <a href="https://www.stonybrook.edu/commcms/centre-valbio/" target="_blank">Home | Centre ValBio (stonybrook.edu) </a>                        </p>
@@ -184,8 +190,8 @@
                <div class="col-md-12">
                    <div class="titlepage">
                        <h2>Waterfall Hikes</h2>
-                       <div class="d-flex align-items-center">
-                           <img src="images/water.webp" class="img-fluid" style="margin-right: 15px; width: 400px;" alt="#"/>
+                       <div>
+                           <img src="images/water.webp" class="img-fluid float-left" style="margin-right: 15px; width: 400px;" alt="#"/>
                            <p class="text-justify margin_0">
                                If you've done the national park and are now looking for a smaller hike close to town, fear not! The area around Ranomafana holds plenty of lovely trails to stroll on. One popular option for locals is a short hike to the biggest waterfall the Namorana river boasts. This waterfall is not visible from the road and is located about an hour walk up the river from town. You start your journey at the public swimming pool (piscine) and from there continue on the main path past the pool up the river. This hike takes you through a small town, along thin dirt paths, and through some rice paddies – don't worry, you're on the right track! You should be able to see the large waterfall in the distance about halfway into the hike. If at any point you feel you are going the wrong direction, asking a passerby for directions to the “cascade” will be sure to set you straight.
                            </p>
@@ -208,28 +214,28 @@
              </button>               </div>
            </div>
            <div class="copyright">
-              <div class="container">
-                 <div class="row">
+            <div class="container">
+                <div class="row">
                     <div class="col-md-10 offset-md-1">
-                       <p>© 2024 All Rights Reserved. Design by 
-                          <a href="#">Herisoa Ny Aina RAZAFIMANDIMBY</a>
-                          &nbsp;
-                          <a href="https://web.facebook.com/profile.php?id=100008213774164" target="_blank">
-                             <i class="fa fa-facebook" aria-hidden="true"></i>
-                          </a>
-                          &nbsp;
-                          <a href="https://www.linkedin.com/in/herisoa-ny-aina-razafimandimby-50962aa2/" target="_blank">
-                             <i class="fa fa-linkedin" aria-hidden="true"></i>
-                          </a>
-                          &nbsp;
-                          <a href="tel:+261346018550" target="_blank">
-                             <i class="fa fa-whatsapp" aria-hidden="true"></i>
-                          </a>
-                       </p>
+                        <!-- Utilisation de flexbox pour aligner les éléments verticalement et répartir l'espace -->
+                        <div class="bailleurs-logos" style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px;">
+                            <!-- Logo à gauche -->
+                            <div class="logo-gauche">
+                                <img src="images/logo1.jpg" alt="Logo Bailleurs 1" class="bailleur-logo" style="max-height: 70px; margin-top: 10px;"> <!-- Ajout du margin-top ici -->
+                            </div>
+        
+                            <!-- Texte centré -->
+                            <p style="margin: 0; text-align: center;">© 2024 All Rights Reserved.</p>
+        
+                            <!-- Logo à droite -->
+                            <div class="logo-droite">
+                                <img src="images/logo2.png" alt="Logo Bailleurs 2" class="bailleur-logo" style="max-height: 70px; margin-top: 10px;"> <!-- Ajout du margin-top ici -->
+                            </div>
+                        </div>
                     </div>
-                 </div>
-              </div>
-           </div>
+                </div>
+            </div>
+        </div>
         </div>
      </footer>
      <script src="js/jquery.min.js"></script>
