--- a/parkinformation.html
+++ b/parkinformation.html
@@ -103,7 +103,7 @@
       </div>
       <!-- about -->
       <div class="about">
-         <div class="container-fluid">
+         <div class="container">
             <div class="row">
                <div class="row align-items-center">
                   <div class="col-md-12 ">
@@ -117,8 +117,8 @@
                <br>
                <div class="row align-items-center">
                   <div class="col-md-12">
-                     <div class="titlepage" style="display: flex; align-items: center;">
-                        <img src="images/parc3.webp" class="img-fluid" style="margin-right: 15px; width: 350px;" alt="#"/>
+                     <div class="titlepage">
+                        <img src="images/parc3.webp" class="img-fluid float-left" style="margin-right: 15px; width: 350px;" alt="#"/>
                         <p class="text-justify" style="margin: 0;">
                            The park’s main circuit is the Talatakely (or Aureus) trail. When choosing this path, one can reasonably expect a 2-4 hour hike walking on a mix of clearly delineated paths and much more ambiguous cuts through the brush of secondary forest. This path takes you into bamboo forests, home of some Golden and Greater bamboo lemur groups, and up to the lookout, where Red-bellied and Red-fronted lemurs enjoy hanging out. Other paths in Talatakely can take you to a waterfall called Sakaroa, where on a hot day one might enjoy a dip. Generally, this circuit is considered easy to moderately challenging with some steep climbs and descents.
                         </p>
@@ -128,11 +128,12 @@
                <br>
                <div class="row align-items-center">
                   <div class="col-md-12">
-                     <div class="titlepage" style="display: flex; align-items: center;">
+                     <div class="titlepage">
+                        <img src="images/parc12.webp" class="img-fluid float-right" style="margin-left: 15px; width: 400px;" alt="#"/>
+
                         <p class="text-justify" style="margin-right: 15px;">
                            Other circuits available include Vatoharanana, Valohoaka, Sahamalaotra. Each of these circuits give you a unique glimpse into Ranomafana, and each has varying degrees of difficulty. It is important to note that whichever circuit you choose, expressing your physical ability and concerns to guides is always welcome, and they are more than capable of adjusting the route they take you on to fit your goals.
                         </p>
-                        <img src="images/parc12.webp" class="img-fluid" style="margin-left: auto; width: 400px;" alt="#"/>
                      </div>
                   </div>
                </div>
@@ -253,28 +254,28 @@
              </button>              </div>
            </div>
            <div class="copyright">
-              <div class="container">
-                 <div class="row">
+            <div class="container">
+                <div class="row">
                     <div class="col-md-10 offset-md-1">
-                       <p>© 2024 All Rights Reserved. Design by 
-                          <a href="#">Herisoa Ny Aina RAZAFIMANDIMBY</a>
-                          &nbsp;
-                          <a href="https://web.facebook.com/profile.php?id=100008213774164" target="_blank">
-                             <i class="fa fa-facebook" aria-hidden="true"></i>
-                          </a>
-                          &nbsp;
-                          <a href="https://www.linkedin.com/in/herisoa-ny-aina-razafimandimby-50962aa2/" target="_blank">
-                             <i class="fa fa-linkedin" aria-hidden="true"></i>
-                          </a>
-                          &nbsp;
-                          <a href="tel:+261346018550" target="_blank">
-                             <i class="fa fa-whatsapp" aria-hidden="true"></i>
-                          </a>
-                       </p>
+                        <!-- Utilisation de flexbox pour aligner les éléments verticalement et répartir l'espace -->
+                        <div class="bailleurs-logos" style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px;">
+                            <!-- Logo à gauche -->
+                            <div class="logo-gauche">
+                                <img src="images/logo1.jpg" alt="Logo Bailleurs 1" class="bailleur-logo" style="max-height: 70px; margin-top: 10px;"> <!-- Ajout du margin-top ici -->
+                            </div>
+        
+                            <!-- Texte centré -->
+                            <p style="margin: 0; text-align: center;">© 2024 All Rights Reserved.</p>
+        
+                            <!-- Logo à droite -->
+                            <div class="logo-droite">
+                                <img src="images/logo2.png" alt="Logo Bailleurs 2" class="bailleur-logo" style="max-height: 70px; margin-top: 10px;"> <!-- Ajout du margin-top ici -->
+                            </div>
+                        </div>
                     </div>
-                 </div>
-              </div>
-           </div>
+                </div>
+            </div>
+        </div>
         </div>
      </footer>
      <script>
